# loci-lite

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE LOCILITE.md  DESIGN LOCILITE.md  PACKAGER.md  RULES.md  index.html  notes.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: sign-release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  mod.rs  note_paths.rs  window.rs
src/editor/: Editor.tsx
src/hooks/: useAiWelcomeMessages.ts  useAtomCreation.ts  useAtoms.ts  useAuth.ts  useAuthContext.tsx  useAuthorshipMode.ts  useBookmarkContextMenu.tsx  useBookmarkHighlight.ts  useBookmarkStacks.ts  useBottomBar.ts  useCreateDocument.ts  useDefaultEditorFontSetting.ts  useDefaultFontSizeSetting.ts  useDeleteDocument.ts  useDocument.ts  useDocumentContextMenu.tsx  useDocumentProjectFolders.ts  useDocumentScrollRestore.ts  useDocumentScrollbar.ts  useDocumentTitles.ts  useDocumentsList.ts  useEditorAtomBridge.ts  useEditorAuthorshipBridge.ts  useEditorChromeEntry.ts  useEditorModeDefaultSettings.ts  useFileTitle.ts  useFindHighlight.ts  useFocusMode.ts  useLastDocumentReturn.ts  useNotifications.tsx  useOpenAIKeySetting.ts  useProjectFolderNames.ts  useRecentFiles.ts  useRemoteSession.ts  useSearchStagger.ts  useSearchableDocuments.ts  useSettings.ts  useShellSidebarGesture.ts  useStackDisplayNames.ts  useStagedProjectItems.ts  (+5 more)
src/lib/: atomLabels.ts  (+40 more)
updates/: README.md  latest.json
(+165 files in other folders)
