[package]
name = "loci-lite"
version = "0.0.0"
description = "Loci Lite"
authors = ["Loci"]
edition = "2021"

[lib]
name = "loci_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
